# Plexity_SDK

./: MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: GRAPHRAG_INTEGRATION.md  GRAPHRAG_SETUP.md  INCREMENTAL_INDEXING.md  INCREMENTAL_INDEXING_SUMMARY.md  INSTALL_AND_RUN.md  PLEXITY_QUICKSTART.md  RELEASING.md  SDK_INITIATIVES.md  SDK_QUICKSTART.md  incremental-indexing-quickstart.md  react-components.md  sdk-js.md  sdk-python.md
docs/integration-guides/: fastapi.md  nextjs.md  react.md
plexity_sdk/: __init__.py  agentic.py  async_client.py  automation.py  client.py  graphrag.py  graphrag_runtime.py  incremental_plugins.py  insights.py  orchestration.py
plexity_sdk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
plexity_sdk/frameworks/: __init__.py  haystack.py
sprintiq_sdk/: __init__.py  agentic.py  automation.py  client.py  graphrag.py  insights.py  webhooks.py
tests/: test_agentic_clients.py  test_async_client.py  test_automation.py  test_client_models.py  test_client_runtime.py  test_enterprise_features.py  test_framework_integrations.py  test_graphrag_client.py  test_graphrag_runtime.py  test_integration_report_validation.py  test_sdk_integration_complete.py
