[project]
name = "plexity-sdk"
version = "0.2.0"
description = "Python SDK for Plexity Agentic RAG Orchestrator"
requires-python = ">=3.9"
readme = "README.md"
authors = [{ name = "Plexity", email = "support@plexity.ai" }]
license = { text = "Proprietary" }
keywords = ["plexity", "rag", "graph", "sdk", "agentic", "automation"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "License :: Other/Proprietary License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "requests>=2.32.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.23.0",
]
langchain = [
  "langchain-core>=0.2.20",
]
llamaindex = [
  "llama-index>=0.10.50",
]
haystack = [
  "haystack-ai>=2.0.0",
]
frameworks = [
  "langchain-core>=0.2.20",
  "llama-index>=0.10.50",
  "haystack-ai>=2.0.0",
]
async = [
  "httpx>=0.27.0",
]
graphrag-core = []
graphrag-enterprise = [
  "neo4j>=5.16",
  "boto3>=1.33.0",
  "google-cloud-storage>=2.16.0",
  "minio>=7.2.14",
  "temporalio>=1.4.0",
]
enterprise = [
  "neo4j>=5.16",
  "boto3>=1.33.0",
  "google-cloud-storage>=2.16.0",
  "minio>=7.2.14",
  "temporalio>=1.4.0",
]
s3 = [
  "boto3>=1.33.0",
]
gcs = [
  "google-cloud-storage>=2.16.0",
]
minio = [
  "minio>=7.2.14",
]
temporal = [
  "temporalio>=1.4.0",
]
argo = [
  "requests>=2.32.0",
]

[project.urls]
Homepage = "https://github.com/plexity/agentic-rag-orchestrator"
Documentation = "https://github.com/plexity/agentic-rag-orchestrator/tree/main/docs"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"plexity_sdk" = ["py.typed"]

[tool.setuptools.packages.find]
include = ["plexity_sdk", "plexity_sdk.*"]
